--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -4,7 +4,7 @@
     background-color: darkorange;
     position: static;
     opacity: 0.7;
-    display: block;
+    display: none;
     z-index: 100;
     width: 100%;
     height: 20%;
@@ -12,9 +12,11 @@
     .pane_top .about {
       position: static;
       height: 100%; }
-      .pane_top .about a, .pane_top .about p, .pane_top .about h3 {
+      .pane_top .about a, .pane_top .about p, .pane_top .about h2 {
         display: inline-flex; }
-      .pane_top .about h3 {
+      .pane_top .about h {
+        letter-spacing: 3pt;
+        color: black;
         opacity: .7;
         padding: 15px;
         margin-top: 2px; }
@@ -48,8 +50,196 @@
     position: static;
     top: 20%;
     display: block;
-    height: 60%;
-    background-image: url("../assets/medias/IMG_2797.png");
+    height: 65%;
+    background-image: url("../assets/medias/ig.png");
+    background-size: 90% 90%;
+    filter: grayscale(90%);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: white; }
+    #main #visual_pane {
+      color: #ffffff;
+      width: 100%;
+      height: auto;
+      position: static;
+      z-index: 98; }
+      #main #visual_pane img {
+        width: 100%;
+        height: auto; }
+      #main #visual_pane .main_menu {
+        height: auto;
+        text-align: center; }
+        #main #visual_pane .main_menu .menu_title_wrapper {
+          width: auto;
+          height: auto;
+          z-index: 99; }
+          #main #visual_pane .main_menu .menu_title_wrapper .menu_title {
+            letter-spacing: 4pt;
+            opacity: 1;
+            font-size: 50pt;
+            font-weight: 500; }
+            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle {
+              padding: 0;
+              font-size: 35pt; }
+            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle_selected {
+              color: darkorange;
+              padding: 0;
+              font-size: 35pt; }
+        #main #visual_pane .main_menu li {
+          list-style-type: none;
+          opacity: 1;
+          font-size: 35pt;
+          font-weight: 400;
+          letter-spacing: 2pt;
+          padding-bottom: 5px; }
+        #main #visual_pane .main_menu li.selected {
+          font-size: 35pt;
+          color: darkorange; }
+        #main #visual_pane .main_menu li:first-child {
+          padding-top: 10px; }
+
+  #monolog_pane {
+    position: static;
+    height: 25%;
+    width: 100%; }
+    #monolog_pane #bread_crums {
+      position: relative;
+      top: 3px;
+      text-align: center;
+      height: auto;
+      font-size: 10pt;
+      letter-spacing: 1pt;
+      color: black;
+      opacity: .7; }
+      #monolog_pane #bread_crums li {
+        font-weight: 600;
+        display: inline;
+        list-style-type: none; }
+      #monolog_pane #bread_crums li.selected {
+        color: darkorange; }
+    #monolog_pane span#content {
+      padding: 1px; }
+      #monolog_pane span#content h4 {
+        padding-top: 10px;
+        padding-left: 10px; }
+      #monolog_pane span#content p {
+        border-top-right-radius: 3px;
+        border-bottom-right-radius: 3px;
+        color: black;
+        opacity: .7;
+        font-size: 10pt;
+        font-weight: lighter;
+        text-indent: 0; }
+      #monolog_pane span#content img#me {
+        border-radius: 50%;
+        opacity: .8;
+        float: left;
+        width: 50px;
+        height: auto;
+        margin: 10px;
+        margin-left: 10px; }
+
+  #social_media_bar {
+    display: block;
+    position: static;
+    width: 100%;
+    height: auto;
+    overflow: auto;
+    white-space: nowrap; }
+    #social_media_bar span {
+      width: auto;
+      height: auto;
+      display: inline-block;
+      color: black;
+      text-align: center;
+      padding: 12px;
+      padding-bottom: 0;
+      padding-top: 20px;
+      text-decoration: none; }
+      #social_media_bar span span#link {
+        width: 33px;
+        height: 33px;
+        background-color: red; }
+      #social_media_bar span img {
+        opacity: .5;
+        padding: 3px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        display: block;
+        margin: auto;
+        width: 33px;
+        height: 33px; }
+
+  div#footer {
+    display: inline-block;
+    position: static;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    border-color: #9c5200;
+    background-color: black;
+    opacity: .7;
+    width: 100%;
+    height: auto;
+    font-size: 8pt;
+    font-weight: 500;
+    line-height: 25px;
+    padding-left: auto;
+    padding-right: auto;
+    color: white;
+    text-align: center; } }
+@media (min-width: 701px) and (max-width: 1200px) {
+  .pane_top {
+    color: white;
+    background-color: darkorange;
+    position: static;
+    opacity: 0.7;
+    display: none;
+    z-index: 100;
+    width: 100%;
+    height: 20%;
+    font-size: 14pt; }
+    .pane_top .about {
+      position: static;
+      height: 100%; }
+      .pane_top .about a, .pane_top .about p, .pane_top .about h2 {
+        display: inline-flex; }
+      .pane_top .about h {
+        letter-spacing: 3pt;
+        color: black;
+        opacity: .7;
+        padding: 15px;
+        margin-top: 2px; }
+      .pane_top .about p {
+        top: 0px;
+        opacity: .7;
+        letter-spacing: 1pt;
+        position: relative;
+        padding-left: 20px;
+        font-size: 12pt;
+        font-weight: 500;
+        text-align: left; }
+      .pane_top .about p#name {
+        position: relative;
+        bottom: 0px;
+        font-size: 11pt; }
+    .pane_top img#self {
+      opacity: .8;
+      float: left;
+      position: absolute;
+      right: 5px;
+      top: 10px;
+      padding: 10px;
+      z-index: 100;
+      border-radius: 50%;
+      width: auto;
+      height: 75px; }
+
+  #main {
+    opacity: .7;
+    position: static;
+    top: 20%;
+    display: block;
+    height: 65%;
     background-size: 85% 85%;
     background-repeat: no-repeat;
     background-position: center;
@@ -94,224 +284,89 @@
 
   #monolog_pane {
     position: static;
-    top: 80%;
-    padding: 10px;
     height: 25%;
-    width: 90%;
-    padding-left: 0; }
+    width: 100%; }
     #monolog_pane #bread_crums {
+      position: relative;
+      top: 3px;
       text-align: center;
-      width: auto;
       height: auto;
-      font-size: 8pt;
+      font-size: 10pt;
       letter-spacing: 1pt;
-      color: black; }
+      color: black;
+      opacity: .7; }
       #monolog_pane #bread_crums li {
-        font-weight: 500;
+        font-weight: 600;
         display: inline;
         list-style-type: none; }
       #monolog_pane #bread_crums li.selected {
         color: darkorange; }
-    #monolog_pane span#content h4 {
-      padding-top: 10px;
-      padding-left: 10px; }
-    #monolog_pane span#content p {
-      display: inherit;
-      border-top-right-radius: 3px;
-      border-bottom-right-radius: 3px;
-      color: black;
-      top: 30px;
-      width: 80%;
-      opacity: .7;
-      font-size: 10pt;
-      padding: 5px;
-      padding-right: 10px;
-      font-weight: lighter;
-      text-indent: 0; }
-    #monolog_pane span#content img#me {
-      border-radius: 50%;
-      opacity: .7;
-      float: right;
-      width: 50px;
-      height: auto;
-      margin-left: 5%; }
+    #monolog_pane span#content {
+      padding: 1px; }
+      #monolog_pane span#content h4 {
+        padding-top: 10px;
+        padding-left: 10px; }
+      #monolog_pane span#content p {
+        border-top-right-radius: 3px;
+        border-bottom-right-radius: 3px;
+        color: black;
+        opacity: .7;
+        font-size: 10pt;
+        font-weight: lighter;
+        text-indent: 0; }
+      #monolog_pane span#content img#me {
+        border-radius: 50%;
+        opacity: .8;
+        float: left;
+        width: 50px;
+        height: auto;
+        margin: 10px;
+        margin-left: 10px; }
 
   #social_media_bar {
     display: block;
     position: static;
-    width: 100%;
-    height: auto; }
-    #social_media_bar ul {
-      position: relative;
-      background-color: #fafafa;
-      opacity: .8;
+    width: 50%;
+    height: auto;
+    overflow: auto;
+    white-space: nowrap; }
+    #social_media_bar a {
+      width: auto;
+      height: auto;
+      display: inline-block;
+      color: black;
+      text-align: center;
+      padding: 14px;
       padding-bottom: 0;
-      list-style-type: none;
-      overflow: hidden; }
-      #social_media_bar ul li {
-        float: left;
-        width: 25%;
-        align-content: center; }
-        #social_media_bar ul li a img {
-          opacity: .5;
-          padding: 10px;
-          display: block;
-          margin: auto;
-          width: 25px;
-          height: 25px;
-          margin-bottom: 0; }
+      padding-top: 20px;
+      text-decoration: none;
+      font-size: 35pt; }
+      #social_media_bar a img {
+        opacity: .5;
+        padding: 10px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        display: block;
+        margin: auto;
+        width: 65px;
+        height: 65px; }
 
   div#footer {
-    border-style: solid;
-    border-width: 1px 0 0 0;
-    border-color: black;
-    background-color: #fafafa;
     display: inline-block;
     position: static;
-    top: 145%;
+    border-style: solid;
+    border-width: 3px 0 0 0;
+    border-color: #ea8000;
+    background-color: black;
+    opacity: .7;
     width: 100%;
     height: auto;
-    font-size: 8pt;
+    font-size: 14pt;
     font-weight: 500;
     line-height: 25px;
     padding-left: auto;
     padding-right: auto;
-    color: black;
+    color: white;
     text-align: center; } }
-@media (min-width: 701px) and (max-width: 1200px) {
-  .main {
-    scroll-snap-points-y: repeat(40%);
-    scroll-snapp-type: mandatory;
-    background-color: black;
-    opacity: .7; }
-
-  .icon_bar {
-    position: relative;
-    opacity: 0.7;
-    display: inline-block;
-    z-index: 100;
-    width: 100%;
-    height: 300px;
-    top: 0px;
-    font-size: 12pt;
-    vertical-align: middle; }
-    .icon_bar img {
-      position: absolute;
-      right: 30px;
-      top: 30px;
-      z-index: 100;
-      opacity: 0.8;
-      border-radius: 50%;
-      width: auto;
-      height: 60px; }
-
-  .menu_btn:active img {
-    opacity: 1; }
-
-  .pane {
-    color: #ffffff;
-    position: static;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: auto; }
-    .pane .main_menu {
-      background-color: inherit;
-      position: absolute;
-      bottom: .5%;
-      height: auto;
-      z-index: 99;
-      display: inline-block;
-      text-align: center; }
-      .pane .main_menu .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 50pt;
-        font-weight: 300;
-        width: 30%;
-        letter-spacing: 4pt;
-        border-bottom: solid white;
-        border-bottom-width: 1px; }
-      .pane .main_menu li {
-        opacity: .6;
-        font-size: 40pt;
-        font-weight: 100;
-        letter-spacing: 1pt; }
-      .pane .main_menu li:first-child {
-        margin-top: 5px; }
-
-  #slogan {
-    padding: 10px;
-    opacity: .7;
-    position: static;
-    height: auto;
-    width: 70%;
-    margin-right: auto;
-    margin-left: auto; }
-    #slogan #content {
-      position: relative;
-      z-index: 101;
-      height: auto;
-      width: 90%; }
-      #slogan #content h1 {
-        padding-top: 10px;
-        padding-left: 10px;
-        font-size: 14pt; }
-      #slogan #content p {
-        opacity: .5; }
-      #slogan #content #signature {
-        display: inline-block;
-        position: relative;
-        width: 100%;
-        height: auto;
-        font-weight: inherit;
-        color: inherit;
-        padding: 2%;
-        font-size: 11pt; }
-        #slogan #content #signature #me {
-          display: block;
-          position: relative;
-          right: 0;
-          width: 50px;
-          height: auto;
-          margin-left: 70%; }
-        #slogan #content #signature #tag {
-          opacity: .5;
-          padding: 1%;
-          margin-left: 70%; }
-
-  #footer {
-    display: block;
-    position: relative;
-    height: 40px;
-    background-color: black;
-    opacity: .6;
-    width: 100%; }
-    #footer .site_version {
-      color: white;
-      position: absolute;
-      bottom: 5px;
-      left: 2%;
-      padding: 3px;
-      font-weight: 500;
-      font-size: 6pt;
-      height: auto;
-      width: auto;
-      opacity: .6; }
-    #footer .icons {
-      color: white;
-      padding: 1px;
-      width: auto;
-      height: auto;
-      display: block;
-      position: absolute;
-      background-color: black;
-      right: 2%;
-      bottom: 5px;
-      opacity: .6; }
-      #footer .icons #framework_icon {
-        width: 20px;
-        height: auto; } }
 
 /*# sourceMappingURL=app.component.css.map */
