--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -4,6 +4,35 @@
 @import 'palette.scss';
 $icon_bar_height: 80px;
 
+@mixin gradient-animation( $start, $end, $transTime ){
+  background-size: 100%;
+  background-image: -webkit-linear-gradient($start, $end);
+  background-image: linear-gradient($start, $end);
+  position: relative;
+  z-index: 100;
+  &:before {
+    border-radius: inherit;
+    background-image: -webkit-linear-gradient($end, $start);
+    background-image: linear-gradient($end, $start);
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0; left: 0;
+    opacity: 0;
+    z-index: -100;
+    -moz-transition: opacity $transTime ease-in-out;
+    -webkit-transition: opacity $transTime ease-in-out;
+    transition: opacity $transTime ease-in-out;
+  }
+  &:hover {
+    &:before {
+      opacity: 1;
+    }
+  }
+}
+
 @media(max-width: $breakpoint-mobile) {
   .pane_top {
     color: white;
@@ -160,23 +189,43 @@ $icon_bar_height: 80px;
 
         opacity: .7;
         font-size: 10pt;
-    //    padding-top: 2px;
-//        padding-right: 10px;
         font-weight: lighter;
         text-indent: 0;
       }
-      img#me{
+
+      div#me_wrap {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+        border-radius: 50%;
+        border-width: 2px;
+        opacity: .9;
+        background: -webkit-linear-gradient(left top, crimson 0%, #f90 100%);
+        float: left;
+        width: 54px;
+        height: 54px;
+        margin: 10px;
+        padding: 2px;
+        div#me {
+          display: inline-block;
+          position: relative;
+          margin: auto;
+          border-style: solid;
           border-radius: 50%;
-          opacity: .8;
-          float: left;
-          width: 50px;
-          height: auto;
-          margin: 10px;
-          margin-left: 10px;
+          //border-color: blue;
+          background-image: url('../assets/medias/me.jpg');
+          background-position: center;
+          background-repeat:no-repeat;
+          background-size: contain;
+          width: 54px;
+          height: 54px;
+
+        }
       }
     }
   }
   #social_media_bar {
+    @include gradient-animation( #ffffff, #464646, 1s);
     display: block;
     position: static;
     width: 100%;
