--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -92,27 +92,37 @@ $icon_bar_height: 80px;
     top: 20%;
     display: block;
     height: 65%;
-    background-image: url('../assets/medias/ig.png');
-    background-size: 90% 90%;
-    filter: grayscale(90%);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: white;
+  //  background-image: url('../assets/medias/ig.png');
+  //  background-size: 90% 90%;
+  //  filter: grayscale(50%);
+  //  background-repeat: no-repeat;
+  //  background-position: center;
+  //  background-color: white;
     #visual_pane {
       img{
+        visibility: hidden;
         width: 100%;
         height: auto;
       }
-      color: $white;
+      .content{
+        width: 103.3333px;
+        height: 103.33px;
+        background-color: black;
+        opacity: 0.7;
+        margin:auto;
+        margin-top: 3px;
+      }
       width: 100%;
+      position: relative;
+      list-style:none;
+      display: flex;
+      flex-flow: wrap;
+      color: white;
+      text-align: center;
       height: auto;
-      position: static;
       z-index: 98;
       .main_menu {
         height: auto;
-        //bottom: 20px;
-        //z-index: 99;
-        //display: inline-block;
         text-align: center;
         .menu_title_wrapper {
           width: auto;
@@ -173,7 +183,7 @@ $icon_bar_height: 80px;
        list-style-type: none;
      }
       li.selected {
-        color: darkorange;
+        color: #ff8c00;
       }
     }
     span#content {
@@ -200,7 +210,7 @@ $icon_bar_height: 80px;
         border-radius: 50%;
         border-width: 2px;
         opacity: .9;
-        background: -webkit-linear-gradient(left top, crimson 0%, #f90 100%);
+        background: -webkit-linear-gradient(left top, #ff8c00 0%, #ea5d54 100%);
         float: left;
         width: 54px;
         height: 54px;
@@ -225,7 +235,7 @@ $icon_bar_height: 80px;
     }
   }
   #social_media_bar {
-    @include gradient-animation( #ffffff, #464646, 1s);
+  //  @include gradient-animation( #ffffff, #464646, 1s);
     display: block;
     position: static;
     width: 100%;
@@ -238,7 +248,7 @@ $icon_bar_height: 80px;
       display: inline-block;
       color: black;
       text-align: center;
-      padding: 12px;
+      padding: 10px;
       padding-bottom: 0;
       padding-top: 20px;
       text-decoration: none;
@@ -248,7 +258,7 @@ $icon_bar_height: 80px;
         background-color:red;
       }
       img {
-        opacity: .5;
+        opacity: .7;
         padding: 3px;
         padding-top: 8px;
         padding-bottom: 8px;
@@ -265,8 +275,8 @@ $icon_bar_height: 80px;
     display: inline-block;
     position: static;
     border-style: solid;
-    border-width: 1px 0 0 0;
-    border-color: #9c5200;
+    //border-width: 1px 0 0 0;
+  //  border-color: #9c5200;
     background-color: black;
     opacity: .7;
    // top: 145%;
