--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -1,20 +1,19 @@
 @media (max-width: 700px) {
   .pane_top {
     color: white;
-    background-color: darkorange;
     position: static;
     opacity: 0.7;
     display: none;
     z-index: 100;
     width: 100%;
-    height: 20%;
+    height: 80%;
     font-size: 14pt; }
     .pane_top .about {
       position: static;
       height: 100%; }
       .pane_top .about a, .pane_top .about p, .pane_top .about h2 {
         display: inline-flex; }
-      .pane_top .about h {
+      .pane_top .about h1 {
         letter-spacing: 3pt;
         color: black;
         opacity: .7;
@@ -45,125 +44,8 @@
       width: auto;
       height: 75px; }
 
-  #main {
-    opacity: .7;
-    position: static;
-    top: 20%;
-    display: block;
-    height: 65%; }
-    #main #visual_pane {
-      width: 100%;
-      position: relative;
-      list-style: none;
-      display: flex;
-      flex-flow: wrap;
-      color: white;
-      text-align: center;
-      height: auto;
-      z-index: 98; }
-      #main #visual_pane img {
-        visibility: hidden;
-        width: 100%;
-        height: auto; }
-      #main #visual_pane .content {
-        width: 103.3333px;
-        height: 103.33px;
-        background-color: black;
-        opacity: 0.7;
-        margin: auto;
-        margin-top: 3px; }
-      #main #visual_pane .main_menu {
-        height: auto;
-        text-align: center; }
-        #main #visual_pane .main_menu .menu_title_wrapper {
-          width: auto;
-          height: auto;
-          z-index: 99; }
-          #main #visual_pane .main_menu .menu_title_wrapper .menu_title {
-            letter-spacing: 4pt;
-            opacity: 1;
-            font-size: 50pt;
-            font-weight: 500; }
-            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle {
-              padding: 0;
-              font-size: 35pt; }
-            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle_selected {
-              color: darkorange;
-              padding: 0;
-              font-size: 35pt; }
-        #main #visual_pane .main_menu li {
-          list-style-type: none;
-          opacity: 1;
-          font-size: 35pt;
-          font-weight: 400;
-          letter-spacing: 2pt;
-          padding-bottom: 5px; }
-        #main #visual_pane .main_menu li.selected {
-          font-size: 35pt;
-          color: darkorange; }
-        #main #visual_pane .main_menu li:first-child {
-          padding-top: 10px; }
-
-  #monolog_pane {
-    position: static;
-    height: 25%;
-    width: 100%; }
-    #monolog_pane #bread_crums {
-      position: relative;
-      top: 3px;
-      text-align: center;
-      height: auto;
-      font-size: 10pt;
-      letter-spacing: 1pt;
-      color: black;
-      opacity: .7; }
-      #monolog_pane #bread_crums li {
-        font-weight: 600;
-        display: inline;
-        list-style-type: none; }
-      #monolog_pane #bread_crums li.selected {
-        color: #ff8c00; }
-    #monolog_pane span#content {
-      padding: 1px; }
-      #monolog_pane span#content h4 {
-        padding-top: 10px;
-        padding-left: 10px; }
-      #monolog_pane span#content p {
-        border-top-right-radius: 3px;
-        border-bottom-right-radius: 3px;
-        color: black;
-        opacity: .7;
-        font-size: 10pt;
-        font-weight: lighter;
-        text-indent: 0; }
-      #monolog_pane span#content div#me_wrap {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center;
-        border-radius: 50%;
-        border-width: 2px;
-        opacity: .9;
-        background: -webkit-linear-gradient(left top, #ff8c00 0%, #ea5d54 100%);
-        float: left;
-        width: 54px;
-        height: 54px;
-        margin: 10px;
-        padding: 2px; }
-        #monolog_pane span#content div#me_wrap div#me {
-          display: inline-block;
-          position: relative;
-          margin: auto;
-          border-style: solid;
-          border-radius: 50%;
-          background-image: url("../assets/medias/me.jpg");
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: contain;
-          width: 54px;
-          height: 54px; }
-
   #social_media_bar {
-    display: block;
+    display: none;
     position: static;
     width: 100%;
     height: auto;
@@ -195,7 +77,8 @@
 
   div#footer {
     display: inline-block;
-    position: static;
+    position: fixed;
+    bottom: 0;
     border-style: solid;
     background-color: black;
     opacity: .7;
@@ -345,7 +228,7 @@
         margin-left: 10px; }
 
   #social_media_bar {
-    display: block;
+    display: none;
     position: static;
     width: 50%;
     height: auto;
