--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -1,4 +1,3 @@
-
 #main {
   position: static;
   height: auto;
@@ -8,64 +7,38 @@
     list-style:none;
     display: flex;
     flex-flow: wrap;
-    color: white;
+    background-color: #1d1d1d;
     text-align: center;
-    .content{
-      line-height: 90px;
-      width: 33%;
-      height: 120px;
-      background-color: black;
-      opacity: 0.7;
-      margin: auto;
-      margin-top: 1px;
+    .content {
+        opacity: .3;
+        width: 33%;
+        height: 120px;
+        background-color: white;
+        margin: auto;
+        margin-top: 1px;
+      a {
+        background-color: darkorange;
+        opacity:.5;
+        font-size: x-large;
+        font-weight: 800;
+        color: white;
+        line-height: 50px;
+        text-decoration: none;
+      }
+      a:hover, a:visited, a:hover{
+        color: white;
+      }
     }
-    //.main_menu {
-    //  height: auto;
-    //  text-align: center;
-    //  .menu_title_wrapper {
-    //    width: auto;
-    //    height: auto;
-    //    .menu_title {
-    //      letter-spacing: 4pt;
-    //      opacity: 1;
-    //      font-size: 50pt;
-    //      font-weight: 500;
-    //      span.menu_subtitle {
-    //        padding: 0;
-    //        font-size: 35pt;
-    //      }
-    //      span.menu_subtitle_selected {
-    //        color: darkorange;
-    //        padding: 0;
-    //        font-size: 35pt;
-    //      }
-    //    }
-    //  }
-    //  li {
-    //    list-style-type: none;
-    //    opacity: 1;
-    //    font-size: 35pt;
-    //    font-weight: 400;
-    //    letter-spacing: 2pt;
-    //    padding-bottom: 5px;
-    //  }
-    //  li.selected {
-    //    font-size: 35pt;
-    //    color: darkorange;
-    //  }
-    //  li:first-child {
-    //    padding-top: 10px;
-    //  }
-    //}
+    .content:active, .content:hover {
+      opacity: 1;
+    }
   }
 }
 #monolog_pane {
-  background-color: orange;
+  background-color: white;
+  opacity: .8;
   position: fixed;
   height: auto;
-  //top: 0%;
-  // padding: 5px;
-  // height: 25%;
   width: 100%;
   #bread_crums{
     cursor: default;
@@ -75,15 +48,15 @@
     height: auto;
     font-size: 10pt;
     letter-spacing: 1pt;
-    color: black;
+    color: gray;
     opacity: .7;
     li{
-      font-weight: 600;
+      font-weight: 800;
       display: inline;
       list-style-type: none;
     }
     li.selected {
-      color: #ff8c00;
+      color: white;
     }
   }
   span#content {
@@ -95,7 +68,7 @@
     p{
       border-top-right-radius: 3px;
       border-bottom-right-radius: 3px;
-      color: black;
+      color: gray;
       opacity: .7;
       font-size: 10pt;
       font-weight: lighter;
@@ -108,8 +81,8 @@
       border-radius: 50%;
       border-width: 2px;
       opacity: .9;
-      background: -webkit-linear-gradient(left top, #ff8c00 0%, #ea5d54 100%);
-      float: left;
+      background: -webkit-linear-gradient(left top, #ffed53 0%,  #9f52ff 100%);
+      float: right;
       width: 54px;
       height: 54px;
       margin: 10px;
@@ -117,10 +90,11 @@
       div#me {
         display: inline-block;
         position: relative;
+        top: 2px;
+        right: 1px;
         margin: auto;
         border-style: solid;
         border-radius: 50%;
-        //border-color: blue;
         background-image: url('../../assets/medias/me.jpg');
         background-position: center;
         background-repeat:no-repeat;
