--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -1,3 +1,13 @@
-<p>
-  blog works!
-</p>
+<div id="hashtagnav">
+  <h2> Hash Nav</h2>
+  <ul>
+    <li>#helloworld</li>
+  </ul>
+</div>
+
+<div id="content">
+  <ul>
+    <li> list item</li>
+    <li> list item</li>
+  </ul>
+</div>
