--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -83,13 +83,13 @@
     background-color: black;
     opacity: .7;
     width: 100%;
-    height: auto;
+    height: 5%;
     font-size: 8pt;
     font-weight: 500;
     line-height: 25px;
     padding-left: auto;
     padding-right: auto;
-    color: white;
+    color: darkorange;
     text-align: center; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   .pane_top {
