--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -128,14 +128,14 @@
     background-color: black;
     opacity: .7;
     width: 100%;
-    height: auto;
+    height: 5%;
     font-size: 8pt;
     font-weight: 500;
     line-height: 25px;
     padding-left: auto;
     padding-right: auto;
-    color: white;
-  text-align: center;
+    color: darkorange;
+    text-align: center;
   }
 }
 
