--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -1,3 +1,5 @@
+@import '../palette.scss';
+
 #main {
   position: static;
   height: auto;
@@ -7,23 +9,24 @@
     list-style:none;
     display: flex;
     flex-flow: wrap;
-    background-color: #1d1d1d;
+    //background-color: gray;
     text-align: center;
     .content {
-        opacity: .3;
+        opacity: .8;
         width: 33%;
         height: 120px;
         background-color: white;
         margin: auto;
         margin-top: 1px;
       a {
-        background-color: darkorange;
-        opacity:.5;
+        width: 100%;
+        background-color: #2ba9a9;
         font-size: x-large;
         font-weight: 800;
         color: white;
-        line-height: 50px;
+        //line-height: 70px;
         text-decoration: none;
+        opacity: .8;
       }
       a:hover, a:visited, a:hover{
         color: white;
@@ -31,32 +34,35 @@
     }
     .content:active, .content:hover {
       opacity: 1;
+      a {
+        opacity: 1;
+      }
     }
   }
 }
 #monolog_pane {
   background-color: white;
-  opacity: .8;
-  position: fixed;
-  height: auto;
+  position: static;
   width: 100%;
+  height: auto;
+  opacity: .8;
   #bread_crums{
     cursor: default;
     position: relative;
     top: 3px;
     text-align: center;
     height: auto;
-    font-size: 10pt;
+    font-size: 11pt;
     letter-spacing: 1pt;
-    color: gray;
-    opacity: .7;
+    color: #717171;
+    opacity: 1;
     li{
       font-weight: 800;
       display: inline;
       list-style-type: none;
     }
     li.selected {
-      color: white;
+      color: darkgray;
     }
   }
   span#content {
@@ -66,10 +72,11 @@
       padding-left: 10px;
     }
     p{
+      padding-left: 5px;
       border-top-right-radius: 3px;
       border-bottom-right-radius: 3px;
-      color: gray;
-      opacity: .7;
+      color: black;
+      //opacity: .7;
       font-size: 10pt;
       font-weight: lighter;
       text-indent: 0;
@@ -81,7 +88,7 @@
       border-radius: 50%;
       border-width: 2px;
       opacity: .9;
-      background: -webkit-linear-gradient(left top, #ffed53 0%,  #9f52ff 100%);
+      background: -webkit-linear-gradient(right top, #2ba9a9 30%,  #ff5644 80%);
       float: right;
       width: 54px;
       height: 54px;
@@ -90,8 +97,7 @@
       div#me {
         display: inline-block;
         position: relative;
-        top: 2px;
-        right: 1px;
+        top: 1px;
         margin: auto;
         border-style: solid;
         border-radius: 50%;
